# InotADev

./: .gitignore  README.md  build.ps1
jni/: CMakeLists.txt
jni/include/: zygisk.hpp
jni/src/: config.cpp  config.hpp  hook_properties.cpp  hook_properties.hpp  hook_settings.cpp  hook_settings.hpp  logging.hpp  main.cpp
module/: customize.sh  module.prop  sepolicy.rule  service.sh
module/webroot/: app.js  index.html  style.css
modules/auto_toggle/: auto_toggle.sh  customize.sh  module.prop  service.sh  update_status.sh
modules/auto_toggle/webroot/: app.js  index.html  style.css
modules/hide_devmode/: customize.sh  module.prop  sepolicy.rule  service.sh
modules/hide_devmode/webroot/: app.js  index.html  style.css
